# backend-template

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: run_migrations.py
src/myapp/: main.py
src/myapp/api/v1/: router.py
src/myapp/api/v1/routes/: health.py  users.py
src/myapp/core/: config.py
src/myapp/db/: session.py
